[package]
name = "dog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
figment = { version = "0.10", features = ["json", "env"] }
serde = { version = "1.0", features = ["derive"] }
poise = "0.5"
log = "0.4"
url = "2.4"
env_logger = "0.10"
