[package]
name = "dog"
version = "0.1.0"
edition = "2021"

[dependencies.chrono]
version = "0.4"

[dependencies.config]
version = "0.15"
features = [
    "json"
]

[dependencies.duration-str]
version = "0.17"

[dependencies.poise]
version = "0.6"

[dependencies.regex]
version = "1"

[dependencies.reqwest]
version = "0.12"

[dependencies.serde]
version = "1"

[dependencies.serenity]
version = "0.12"

[dependencies.tokio]
version = "1.32"
features = [
    "macros",
    "rt-multi-thread"
]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
